feat: log output from external command